# SAPPHIRE_Forecast_Tools

./: .RData  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build-docker-images.sh  docker-compose.yml  implementation_guide.md  implementation_plan.md  mkdocs.yml  python_requirements.txt  pyton_requirements.txt  requirements.txt
.serena/: .gitignore  (+1 more)
apps/forecast_dashboard/: Dockerfile  Dockerfile.py312  auth_utils.py  forecast_dashboard.py  package_versions_backup_2026-01-24.txt  pentad_dashboard.py  pentad_dashboard_intermediate.py  pentad_dashboard_old.py  pentad_dashboard_test.py  pyproject.toml  readme  readme.md  requirements.txt  test.py  test_docker.py  test_localization.py
apps/forecast_dashboard/dashboard/: auth_manager.py  bulletin_manager.py  config.py  data_manager.py  logger.py  utils.py  widgets.py
apps/forecast_dashboard/src/: auth_utils.py  bulletins.py  dashboard_methods.py  db.py  environment.py  file_downloader.py  gettext_config.py  layout.py  multithreading.py  processing.py  reports.py  site.py  tags.py  vizualization.py
apps/forecast_dashboard/tests/: test_dashboard_methods.py  test_integration.py
apps/iEasyHydroForecast/: Dockerfile  README.md  datetime_utils.py  deploy.sh  forecast_library.py  pyproject.toml  requirements.txt  say_hello.sh  setup.py  setup_library.py  tag_library.py
apps/iEasyHydroForecast/tests/: conftest.py  test_datetime_utils.py  test_forecast_library.py  test_leap_year_handling.py  test_setup_library.py  test_tag_library.py
apps/iEasyHydroForecast/tests/test_data/: .env_develop_test  daily_discharge_data_test_file.csv  test_probabil_arima_forecast.csv
apps/linear_regression/: Dockerfile  Dockerfile.py312  README.md  linear_regression.py  pyproject.toml  requirements.txt
apps/linear_regression/src/: config.py  src.py
apps/linear_regression/test/: conftest.py  test_config.py  test_forecast_library_api.py
apps/long_term_forecasting/: TODO:md  __init__.py  calibrate_and_hindcast.py  config_forecast.py  config_monthly.json  data_interface.py  dev_investigate_data.py  initialize_models_local.sh  lt_utils.py  post_process_lt_forecast.py  pyproject.toml  readme.md  requirements.txt  run_forecast.py
apps/long_term_forecasting/dev_code/: dev_investigate_data.py  dev_month_mapping.py  post_process_csv_files.py  simulate_forecasts.py
apps/long_term_forecasting/tests/: test_data_interface.py  test_post_process_lt_forecast.py
apps/machine_learning/: Dockerfile  Dockerfile.py312  add_new_station.py  clean_hindcast_folder.py  fill_ml_gaps.py  hindcast_ML_models.py  initialize_ml_tool.py  locally_run_ml_forecasts.sh  make_forecast.py  pyproject.toml  readme.md  recalculate_nan_forecasts.py  requirements.txt
apps/machine_learning/scr/: BaseDartsDLPredictor.py  BasePredictor.py  RR_torch_baseclass.py  TFTPredictor.py  TSMixerPredictor.py  TiDEPredictor.py  helper_torch.py  predictor_ARIMA.py  predictor_RRMamba.py  predictor_TFT.py  predictor_TIDE.py  predictor_TSMIXER.py  predictor_classPCA.py  utils_ml_forecast.py
apps/machine_learning/test/: test_api_integration.py
apps/pipeline/: Dockerfile  Dockerfile.py312  README  docker_runner.py  docker_utils.py  luigi.cfg  pipeline.py  pipeline_develop.py  pipeline_docker.py  pyproject.toml  requirements.txt
apps/pipeline/logs/: log
apps/pipeline/src/: compare_logged_times.ipynb  environment.py  evaluate_logged_times.ipynb  notification_manager.py  pipeline_utils.py  timeout_manager.py
apps/pipeline/tests/: conftest.py  run_tests.py  test_email_notification.py  test_marker_files.py  test_pipeline_utils.py  test_preprocessing.py  timeout_diagnostics.py
apps/pipeline/tests/test_container/: Dockerfile  script.py
apps/postprocessing_forecasts/: Dockerfile  Dockerfile.py312  README.md  postprocessing_forecasts.py  postprocessing_maintenance.py  postprocessing_operational.py  pyproject.toml  recalculate_skill_metrics.py  requirements.txt
apps/postprocessing_forecasts/logs/: log
apps/postprocessing_forecasts/src/: data_reader.py  ensemble_calculator.py  gap_detector.py  postprocessing_tools.py
apps/postprocessing_forecasts/tests/: conftest.py  hydroTestDataGenerator.py  readme  test_api_integration.py  test_api_read.py  test_calculate_all_skill_metrics.py  test_constants.py  test_data_reader.py  test_edge_cases.py  test_ensemble_calculator.py  test_error_accumulation.py  test_gap_detector.py  test_integration_postprocessing.py  test_maintenance_workflow.py  test_mock_postprocessing_forecasts.py  test_operational_workflow.py  test_performance.py  test_postprocessing_forecasts.py  test_postprocessing_tools.py  test_recalc_workflow.py
apps/preprocessing_gateway/: Dockerfile  Dockerfile.py312  Quantile_Mapping_OP.py  README.md  dg_utils.py  extend_era5_reanalysis.py  get_era5_reanalysis_data.py  pyproject.toml  requirements.txt  snow_data_operational.py  snow_data_renalysis.py
apps/preprocessing_gateway/test/: test_api_integration.py
apps/preprocessing_runoff/: Dockerfile  Dockerfile.py312  README.md  config.yaml  diagnose_excel_files.py  preprocessing_runoff.py  pyproject.toml  requirements.txt
apps/preprocessing_runoff/src/: config.py  profiling.py  src.py
apps/preprocessing_runoff/test/: add_fake_recent_data.py  conftest.py  test_api_write.py  test_cache_management.py  test_config.py  test_edge_cases.py  test_filter_outliers_seasonal.py  test_hydrograph_generation.py  test_integration_maintenance_gaps.py  test_merge_update.py  test_output_validation.py  test_pagination.py  test_spot_check.py  test_src.py  testspecial_compare_daily_runoff_csv.py  testspecial_preprocessing_data.py  testspecial_sdk_data_retrieval.py
apps/preprocessing_runoff/test/test_files/: 12345_abcde.xlsx  test_runoff_file.xlsx
sapphire/services/postprocessing/: Dockerfile  pyproject.toml
sapphire/services/postprocessing/app/: config.py  crud.py  data_migrator.py  database.py  logger.py  main.py  models.py  run_data_migrator.sh  schemas.py
sapphire/services/postprocessing/tests/: __init__.py  conftest.py  factories.py  test_crud.py  test_data_migrator.py  test_endpoints.py
(+300 files in other folders)
