[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iEasyHydroForecast"
version = "0.1.0"
description = "A package for hydrological forecasting"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Beatrice Marti", url = "https://github.com/mabesa"},
    {name = "Sandro Hunziker", url = "https://github.com/sandrohuni"},
    {name = "Maxat Pernebaev", url = "https://github.com/maxatp"},
    {name = "Adrian Kreiner", url = "https://github.com/adriankreiner"},
    {name = "Aidar Zhumabaev", url = "https://github.com/LagmanEater"},
    {name = "Vjekoslav Večković", url = "https://github.com/vjekoslavveckovic"},
]
dependencies = [
    # Core data processing
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    # Excel support (required by pandas for .xlsx files)
    "openpyxl>=3.1.2",
    # Configuration
    "python-dotenv>=1.0.1",
    # Timezone handling
    "pytz>=2024.1",
    # External SDK (brings in requests as transitive dependency)
    "ieasyhydro-sdk @ git+https://github.com/hydrosolutions/ieasyhydro-python-sdk@master",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
    "__init__.py",
    "forecast_library.py",
    "setup_library.py",
    "tag_library.py",
]

[tool.pytest.ini_options]
# Tests must be run from the apps/ directory for correct imports
# Use: cd apps && SAPPHIRE_TEST_ENV=True uv run --directory iEasyHydroForecast pytest iEasyHydroForecast/tests/
pythonpath = [".."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]