[project]
name = "linear-regression"
version = "0.1.0"
description = "Linear regression forecast module for SAPPHIRE forecast tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Beatrice Marti", url = "https://github.com/mabesa"},
]
dependencies = [
    # Core data processing
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    # Date/time handling
    "DateTime>=5.5",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    # Configuration
    "python-dotenv>=1.0.1",
    # HTTP requests
    "requests>=2.32.0",
    # Docker client (for container operations)
    "docker>=7.1.0",
    # External SDK (brings in requests as transitive dependency)
    "ieasyhydro-sdk @ git+https://github.com/hydrosolutions/ieasyhydro-python-sdk@master",
    # SAPPHIRE API client (for writing forecasts to postprocessing service)
    "sapphire-api-client @ git+https://github.com/hydrosolutions/sapphire-api-client.git@f70a83d6b092b7c616239f50d061f7f03eabcbb2",
    # Local library dependency
    "iEasyHydroForecast @ file:///${PROJECT_ROOT}/../iEasyHydroForecast",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.uv]
# Allow git and local path dependencies
allow-insecure-host = []

[tool.uv.sources]
# Use local iEasyHydroForecast from sibling directory
iEasyHydroForecast = { path = "../iEasyHydroForecast", editable = true }

[tool.pytest.ini_options]
# Tests are in the test/ directory
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
