[project]
name = "machine-learning"
version = "0.1.0"
description = "Machine learning forecast module for SAPPHIRE forecast tools (TFT, TiDE, TSMixer models)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Beatrice Marti", url = "https://github.com/mabesa"},
]
dependencies = [
    # Deep learning frameworks
    "torch==2.8.0",
    "darts==0.35.0",
    # Potential evapotranspiration calculation
    "PE-Oudin>=0.3",
    # Sunrise/sunset calculations
    "suntime>=1.3.2",
    # Core data processing (also pulled in by darts)
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    # Configuration
    "python-dotenv>=1.0.1",
    # Data Gateway client
    "sapphire-dg-client @ git+https://github.com/hydrosolutions/sapphire-dg-client.git@main",
    # SAPPHIRE API client (for writing forecasts to postprocessing service)
    "sapphire-api-client @ git+https://github.com/hydrosolutions/sapphire-api-client.git@f70a83d6b092b7c616239f50d061f7f03eabcbb2",
    # Local library dependency
    "iEasyHydroForecast @ file:///${PROJECT_ROOT}/../iEasyHydroForecast",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.uv]
# Allow git and local path dependencies
allow-insecure-host = []

[tool.uv.sources]
# Use local iEasyHydroForecast from sibling directory
iEasyHydroForecast = { path = "../iEasyHydroForecast", editable = true }

[tool.pytest.ini_options]
# Tests are in the test/ directory (when added)
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
