[project]
name = "postprocessing-service"
version = "1.0.0"
description = "FastAPI microservice for postprocessing forecast data and skill metrics"
requires-python = ">=3.11"
authors = [
    {name = "Beatrice Marti"},
]
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "alembic>=1.17.0",
    "pandas>=2.3.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: performance benchmarks (deselect with '-m \"not benchmark\"')",
]
addopts = "-v --tb=short --strict-markers"
